users_list partial can display any role

--- a/config/database.yml
+++ b/config/database.yml
@@ -79,6 +79,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
   database: aupairs_match_production
   username: aupairs_match
   password: <%= ENV["AUPAIRS_MATCH_DATABASE_PASSWORD"] %>
