Fix cloudinary config

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,7 +9,9 @@ local:
 # config/storage.yml
 cloudinary:
   service: Cloudinary
-  folder: <%= Rails.env %>
+  cloud_name: <%= Rails.application.credentials.dig(:cloudinary, :cloud_name) %>
+  api_key: <%= Rails.application.credentials.dig(:cloudinary, :api_key) %>
+  api_secret: <%= Rails.application.credentials.dig(:cloudinary, :api_secret) %>
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
