--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,6 @@
 *.swp
 .DS_Store
 
-/config/credentials/development.key
-
-/config/credentials/test.key
-
-/config/credentials/production.key
+/config/master.key
+/config/credentials/*.key
+/config/credentials/*.yml.enc
